Add timer functions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div id="clock">
       <p id="indicator">Session</p>
-      <p>25:00</p>
+      <p id="timer">25:00</p>
       <div class="controls">
         <div id="start" class="clock-controls"></div>
         <div id="pause" class="clock-controls"></div>
