--- a/index.html
+++ b/index.html
@@ -45,5 +45,7 @@
       </div>
     </div>
 
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
