--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
       <div id="indicator">
         Session
       </div>
-      <div id="clock">
-        25:00
-      </div>
+      <div id="clock">25:00</div>
       <div class="controls">
         <span id="play" class="btn"><i class="fa fa-2x fa-play"></i></span><!--
         --><span id="pause" class="btn"><i class="fa fa-2x fa-pause"></i></span><!--
