--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         Session
       </div>
       <div id="clock">25:00</div>
+      <div id="sound"></div>
       <div class="controls">
         <span id="play" class="btn"><i class="fa fa-2x fa-play"></i></span><!--
         --><span id="pause" class="btn"><i class="fa fa-2x fa-pause"></i></span><!--
